# parse-bash-configs

./: LICENSE  parse-bash-configs.cabal  stack.yaml
src/Data/: BasicBashConfig.hs
tests/: test_main.hs
